--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "dialogflow": "^0.6.0",
     "dotenv": "^6.0.0",
     "express": "^4.15.4",
     "if-env": "^1.0.4"
